<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#198754"
    android:backgroundTint="@color/Green"
    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="165dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/Registertitle"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/ic_white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_white_background"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/Name"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#7E7979" />

            <EditText
                android:id="@+id/Enrollment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/Enrollment"
                android:inputType="number"
                android:maxLength="12"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#7E7979" />

            <EditText
                android:id="@+id/Department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Department"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#7E7979" />

            <EditText
                android:id="@+id/Mobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:maxLength="10"
                android:hint="@string/Mobileno"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#7E7979" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#7E7979" />

            <EditText
                android:id="@+id/Createpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/Createpassword"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#7E7979" />

            <Button
                android:id="@+id/Registerbtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Register" />

            <TextView
                android:id="@+id/Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/registertologin"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>